fixes for app wrap

--- a/app/webroot/css/styles.less
+++ b/app/webroot/css/styles.less
@@ -382,6 +382,21 @@ img {
 	padding: 30px 12px;
 }
 
+.acct_login {
+	padding: 30px 12px;
+	.btn {
+		border: none;
+		border-radius: 0;
+		background: @white;
+		text-transform: uppercase;
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 20px;
+		color: @red;
+		padding: 10px;
+	}
+}
+
 @import "responsive_large.less";
 @import "responsive_tablet.less";
 @import "responsive_phone.less";
